--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
+    
     <header class="page-header" role="banner">
       <h1 class="project-name">
           干细胞分化发育与疾病的表观遗传调控研究组
@@ -27,10 +28,11 @@
           
       </h2>
       
-        <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
-        <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
-
+        <a href="" class="btn">课题组介绍</a>
+        <a href="" class="btn">人员介绍</a>
+        <a href="" class="btn"成果列表</a>
+        
+      
     </header>
 
     <main id="content" class="main-content" role="main">
@@ -38,7 +40,7 @@
       {{ content }}
 
       <footer class="site-footer">
-      
+          <a href="https://github.com/fzhang-sjtu/lilab" class="btn"网站维护</a>
       </footer>
     </main>
   </body>
