--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
           
       </h2>
       
-        <a href="" class="btn"> 课题组介绍 </a>
+        <a href="" class="btn"> 研究方向 </a>
         <a href="" class="btn"> 人员介绍 </a>
         <a href="" class="btn"> 成果列表 </a>
         
