--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
           
       </h2>
       
-        <a href="" class="btn"> 研究方向 </a>
+        <a href="https://www.test-test.cn/lilab/#%E7%A0%94%E7%A9%B6%E6%96%B9%E5%90%91" class="btn"> 研究方向 </a>
         <a href="" class="btn"> 人员介绍 </a>
         <a href="" class="btn"> 成果列表 </a>
         
