--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,13 +35,18 @@
       
     </header>
 
+    
     <main id="content" class="main-content" role="main">
       
-      {{ content }}
-
+        <section>
+          {{ content }}
+        </section>
+      
       <footer class="site-footer">
-          <a href="https://github.com/fzhang-sjtu/lilab" class="btn"网站维护</a>
+          <a href="https://github.com/fzhang-sjtu/lilab"> 网站维护</a>
       </footer>
     </main>
+    
+    
   </body>
 </html>
