--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1> 干细胞分化发育与疾病的表观遗传调控研究组 </h1>
         
         {% if site.logo %}
           <img src="https://fzhang.bioinfo-lab.com/img/colla_logo.png" alt="Logo" />
