--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,9 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1> 干细胞分化发育与疾病的表观遗传调控研究组 </h1>
+        <h1> Li-lab </h1>
+        
+        <p> <b> 干细胞分化发育与疾病的表观遗传调控研究组 </b> </p>
         
         {% if site.logo %}
           <img src="https://fzhang.bioinfo-lab.com/img/colla_logo.png" alt="Logo" />
