--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
         <p> <b> 干细胞分化发育与疾病的表观遗传调控研究组 </b> </p>
         
         {% if site.logo %}
-          <img src="https://fzhang.bioinfo-lab.com/img/colla_logo.png" alt="Logo" />
+          <img src="https://www.shsmu.edu.cn/__local/E/AF/FF/20C6A580DF188EDEC057CBCE7DA_3A99EF97_14E56.jpg" alt="Logo" width="270"/>
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
