--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,23 +22,12 @@
           <img src="https://www.shsmu.edu.cn/__local/E/AF/FF/20C6A580DF188EDEC057CBCE7DA_3A99EF97_14E56.jpg" alt="Logo" width="290"/>
         {% endif %}
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <p> </p>
 
-        {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        {% endif %}
-
-        {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
-
-        {% if site.show_downloads %}
-        <ul class="downloads">
-          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-        </ul>
-        {% endif %}
+        <p class="view">▸ <a href="/cn/#-研究方向">研究方向</a></p>
+        <p class="view">▸ <a href="/cn/#-人员介绍">人员介绍</a></p>
+        <p class="view">▸ <a href="/cn/#-成果列表">成果列表</a></p>     
+         
       </header>
       <section>
 
