--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,9 @@
 
         <p> </p>
 
-        <p class="view">▸ <a href="/lilab/#-研究方向">研究方向</a></p>
-        <p class="view">▸ <a href="/lilab/#-人员介绍">人员介绍</a></p>
-        <p class="view">▸ <a href="/lilab/#-成果列表">成果列表</a></p>     
+        <p class="view">▸ <a href="/lilab/#研究方向">研究方向</a></p>
+        <p class="view">▸ <a href="/lilab/#人员介绍">人员介绍</a></p>
+        <p class="view">▸ <a href="/lilab/#成果列表">成果列表</a></p>     
          
       </header>
       <section>
