--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
       
       <footer>
         
-        <p><small><a href="https://github.com/fzhang-sjtu/lilab/">网站维护</a></small></p>
+        <p><small><a href="https://github.com/fzhang-sjtu/lilab/">Site Code</a></small></p>
         
       </footer>
     </div>
