--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,10 +22,13 @@
         
         <p> <b> 干细胞分化发育与疾病的表观遗传调控研究组 </b> </p>
         
-        {% if site.logo %}
-          <img src="https://www.shsmu.edu.cn/__local/E/AF/FF/20C6A580DF188EDEC057CBCE7DA_3A99EF97_14E56.jpg" alt="Logo" width="280"/>
-        {% endif %}
-
+        
+        <img src="https://www.shsmu.edu.cn/__local/E/AF/FF/20C6A580DF188EDEC057CBCE7DA_3A99EF97_14E56.jpg" alt="Logo" width="280"/>
+        
+        
+        <p><small>基础医学院-组织胚胎学与遗传发育学系</small></p>
+        <p><small>上海交通大学医学院</small></p>
+        
         <p> </p>
 
         <p class="view">▸ <a href="/lilab/#研究方向">研究方向</a></p>
