--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,12 +22,10 @@
         
         <p> <b> 干细胞分化发育与疾病的表观遗传调控研究组 </b> </p>
         
+
+        <img src="https://www.test-test.cn/lilab/source/epi.jpg" alt="Logo" width="280"/>     
         
-        <img src="https://www.shsmu.edu.cn/__local/E/AF/FF/20C6A580DF188EDEC057CBCE7DA_3A99EF97_14E56.jpg" alt="Logo" width="280"/>
-        
-        
-        <p><small>基础医学院-组织胚胎学与遗传发育学系</small></p>
-        <p><small>上海交通大学医学院</small></p>
+        <p><small>基础医学院-组织胚胎学与遗传发育学系 </br> 上海交通大学医学院 </small></p>
         
         <p> </p>
 
