--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
         <p> <b> 干细胞分化发育与疾病的表观遗传调控研究组 </b> </p>
         
 
-        <img src="https://www.test-test.cn/lilab/source/epi.jpg" alt="Logo" width="280"/>     
+        <img src="https://www.test-test.cn/lilab/source/SHSMU.jpg" alt="Logo" width="280"/>     
         
         <p><small>基础医学院-组织胚胎学与遗传发育学系 </br> 上海交通大学医学院 </small></p>
         
