--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 
         <img src="https://www.test-test.cn/lilab/source/SHSMU.jpg" alt="Logo" width="280"/>     
         
-        <p><small>基础医学院-组织胚胎学与遗传发育学系 </br> 上海交通大学医学院 </small></p>
+        <p><small> 上海交通大学医学院 </br> 基础医学院-组织胚胎学与遗传发育学系 </small></p>
         
         <p> </p>
 
