--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -177,6 +177,10 @@ section {
   padding-bottom:50px;
 }
 
+blank {
+  height:800px;
+}
+
 small {
   font-size:11px;
 }
@@ -254,6 +258,10 @@ footer {
     padding:15px;
   }
 
+  blank {
+    height:50px;
+  }
+  
   .downloads {
     width:99%;
   }
