--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,15 +23,15 @@
         <p> <b> 干细胞分化发育与疾病的表观遗传调控研究组 </b> </p>
         
 
-        <img src="https://www.test-test.cn/lilab/source/SHSMU.jpg" alt="Logo" width="280"/>     
+        <img src="https://lilab-sjtu.github.io/source/SHSMU.jpg" alt="Logo" width="280"/>     
         
         <p><small> 上海交通大学医学院 </br> 基础医学院-组织胚胎学与遗传发育学系 </small></p>
         
         <p> </p>
 
-        <p class="view">▸ <a href="/lilab/#研究方向">研究方向</a></p>
-        <p class="view">▸ <a href="/lilab/#人员介绍">人员介绍</a></p>
-        <p class="view">▸ <a href="/lilab/#成果列表">成果列表</a></p>     
+        <p class="view">▸ <a href="/#研究方向">研究方向</a></p>
+        <p class="view">▸ <a href="/#人员介绍">人员介绍</a></p>
+        <p class="view">▸ <a href="/#成果列表">成果列表</a></p>     
          
       </header>
       
@@ -43,7 +43,7 @@
       
       <footer>
         
-        <p><small><a href="https://github.com/fzhang-sjtu/lilab/">Site Code</a></small></p>
+        <p><small><a href="https://github.com/lilab-sjtu/lilab-sjtu.github.io/">Site Code</a></small></p>
         
       </footer>
     </div>
