--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,8 @@
         <p> <b> 干细胞分化发育与疾病的表观遗传调控研究组 </b> </p>
         
 
-        <img src="https://lilab-sjtu.github.io/source/SHSMU.jpg" alt="Logo" width="280"/>     
+        <!img src="https://lilab-sjtu.github.io/source/SHSMU.jpg" alt="Logo" width="280"/>     
         
-        <p><small> 上海交通大学医学院 </br> 基础医学院-组织胚胎学与遗传发育学系 </small></p>
         
         <p> </p>
 
