--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
         
         
         <p> </p>
-
+        <p class="view">▸ <a href="/#常用链接">常用链接</a></p>
         <p class="view">▸ <a href="/#研究方向">研究方向</a></p>
         <p class="view">▸ <a href="/#人员介绍">人员介绍</a></p>
         <p class="view">▸ <a href="/#成果列表">成果列表</a></p>     
