--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
       
       <footer>
         
-        <p><small><a href="https://github.com/lilab-sjtu/lilab-sjtu.github.io/">Site Code</a></small></p>
+        <p><small><a href="https://github.com/lilab-sjtu/lilab-sjtu.github.io/" target="_blank">Site Code</a></small></p>
         
       </footer>
     </div>
