--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,9 @@
         
         <p> <b> 干细胞分化发育与疾病的表观遗传调控研究组 </b> </p>
         
+        <p> <b> No.280 South Chong Qing Road, Shanghai, China, 200025  </b> </p>
+
+        <p> <b> Email: lingjie@shsmu.edu.cn <p> <b>
 
         <!img src="https://lilab-sjtu.github.io/source/SHSMU.jpg" alt="Logo" width="280"/>     
         
