--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,8 @@
       <header>
         <h1> Li-lab </h1>
         
+        <p> <b> 上海交通大学医学院 基础医学院 组织胚胎学与遗传发育学系 </b> </p>
+        
         <p> <b> 干细胞分化发育与疾病的表观遗传调控研究组 </b> </p>
         
         <p> <b> 重庆南路280号, 上海, 中国, 200025  </b> </p>
