--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         
         <p> <b> 干细胞分化发育与疾病的表观遗传调控研究组 </b> </p>
         
-        <p> <b> 上海交通大学医学院，重庆南路280号, 上海, 中国, 200025  </b> </p>
+        <p> <b> 重庆南路280号, 上海, 中国, 200025  </b> </p>
 
         <p> <b> lingjie@shsmu.edu.cn </p> </b>
 
