--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,8 @@
         
         <p> <b> 干细胞分化发育与疾病的表观遗传调控研究组 </b> </p>
         
+        <p> <b> 上海交通大学医学院  </b> </p>
+        
         <p> <b> 重庆南路280号, 上海, 中国, 200025  </b> </p>
 
         <p> <b> lingjie@shsmu.edu.cn </p> </b>
@@ -30,10 +32,10 @@
         
         
         <p> </p>
-        <p class="view">▸ <a href="/#常用链接">常用链接</a></p>
         <p class="view">▸ <a href="/#研究方向">研究方向</a></p>
         <p class="view">▸ <a href="/#人员介绍">人员介绍</a></p>
-        <p class="view">▸ <a href="/#代表成果">代表成果</a></p>            
+        <p class="view">▸ <a href="/#代表成果">代表成果</a></p>
+        <p class="view">▸ <a href="/#常用链接">常用链接</a></p>
           
       </header>
       
