--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,7 @@
         
         <p> <b> 干细胞分化发育与疾病的表观遗传调控研究组 </b> </p>
         
-        <p> <b> 重庆南路280号, 上海, 中国, 200025  </b> </p>
-
-        <p> <b> 上海交通大学医学院 </b> </p>
+        <p> <b> 重庆南路, 上海, 中国, 200025  </b> </p>
         
         <img src="https://lilab-sjtu.github.io/source/SHSMU.jpg" alt="Logo" width="280"/>     
         
